--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"><link href="https://fonts.googleapis.com/css?family=Assistant:500|Merriweather+Sans|Cabin+Condensed:600|Noto+Serif:700|Chau+Philomene+One" rel="stylesheet">
     <script src="https://use.fontawesome.com/992a4dda6a.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
