adjusted project elements for large tablet screen sizes

--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112437058-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-112437058-1');
+    </script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <meta name="description" content="Developing online and mobile solutions using test-driven development and web standard best practices utilizing JavaScript, React, Redux, Node, MongoDB, JWT Auth, Mocha/Chai, PHP, SQL/MySQL, Java, and Responsive UX/UIs. Seeking a position where I can assist and contribute to a team of dynamic developers while strengthening my development skills by creating digital solutions utilizing latest frameworks and technologies.">
+    <meta name="keyword" content="web developer, web designer,Portland, Portland Oregon, web sites, web applications, databases, digital media, JavaScript, React, Redux, Node, MongoDB, Mocha, Chai, PHP, MySQL, HTML5, CSS3, SEO, JSON, AJAX, WordPress, Linux, Unix, Version Control, Image optimization, browser development tools, SQL, System Design, Audio, ProTools, MIDI, analog recording, analog mixing, digital recording, digital mixing, Sync to picture, outboard gear, live sound reinforcement, database design, database programming, Le-Reiver, le-reiver, Michael Le-Reiver, Michael Reiver, Reiver">
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico"><link href="https://fonts.googleapis.com/css?family=Assistant:500|Merriweather+Sans|Cabin+Condensed:600|Noto+Serif:700|Chau+Philomene+One" rel="stylesheet">
-    <script src="https://use.fontawesome.com/992a4dda6a.js"></script>
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=Assistant:500|Merriweather+Sans|Cabin+Condensed:600|Noto+Serif:700|Chau+Philomene+One" rel="stylesheet">
+    <script src="https://use.fontawesome.com/9a832bcebe.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
